맵 화면(자동 위치 찾아서 표시)

--- a/Where2Walk/app/src/main/res/values/colors.xml
+++ b/Where2Walk/app/src/main/res/values/colors.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="main_background_color">#455A64</color>\
+
     <color name="colorPrimary">#a8d08d</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
