--- a/Where2Walk/app/src/main/res/layout/activity_maps.xml
+++ b/Where2Walk/app/src/main/res/layout/activity_maps.xml
@@ -29,6 +29,7 @@
         android:layout_marginBottom="115dp"
         android:textOff="Start Routing"
         android:textOn="Stop Routing"
+        android:onClick="onStartEndMarker"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
